--- a/configure.ac
+++ b/configure.ac
@@ -57,6 +57,7 @@ PKG_CHECK_MODULES(GLIB, gio-2.0 >= $GIO_REQUIRED
 		        gobject-2.0 >= 2.22.0)
 
 PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.22.0)
+PKG_CHECK_MODULES(UUID, uuid >= 2.16.0)
 
 PKG_CHECK_MODULES([GIO_UNIX], [gio-unix-2.0 >= $GIO_REQUIRED],
         [HAVE_GIO_UNIX=yes],
