Adds new abstract class EvdTransport

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -52,6 +52,8 @@ source_c = \
 	evd-tls-credentials.c \
 	evd-connection.c \
 	evd-connection-group.c \
+	evd-http-connection.c \
+	evd-transport.c \
 	evd-peer.c
 
 source_h = \
@@ -77,6 +79,8 @@ source_h = \
 	evd-tls-credentials.h \
 	evd-connection.h \
 	evd-connection-group.h \
+	evd-http-connection.h \
+	evd-transport.h \
 	evd-peer.h
 
 source_h_priv = \
