Adds new class EvdLongPolling

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -54,7 +54,8 @@ source_c = \
 	evd-connection-group.c \
 	evd-http-connection.c \
 	evd-transport.c \
-	evd-peer.c
+	evd-peer.c \
+	evd-long-polling.c
 
 source_h = \
 	evd.h \
@@ -81,7 +82,8 @@ source_h = \
 	evd-connection-group.h \
 	evd-http-connection.h \
 	evd-transport.h \
-	evd-peer.h
+	evd-peer.h \
+	evd-long-polling.h
 
 source_h_priv = \
 	evd-marshal.h \
