Adds new class EvdPeerManager to manage peers ortogonally
It can be used as a singleton instance using 'evd_peer_manager_get_default ()'.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -54,6 +54,7 @@ source_c = \
 	evd-web-service.c \
 	evd-transport.c \
 	evd-peer.c \
+	evd-peer-manager.c \
 	evd-long-polling.c \
 	evd-connection-pool.c \
 	evd-reproxy.c \
@@ -85,6 +86,7 @@ source_h = \
 	evd-web-service.h \
 	evd-transport.h \
 	evd-peer.h \
+	evd-peer-manager.h \
 	evd-long-polling.h \
 	evd-connection-pool.h \
 	evd-reproxy.h \
