Adds 'ping-server' demo in C language, now under 'examples' folder
instead of 'demos' folder, which is to be removed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = \
 	evd \
-	tests
+	tests \
+	examples
 
 if BUILD_GTK_DOC
 SUBDIRS += doc
@@ -9,7 +10,8 @@ endif
 DIST_SUBDIRS = \
 	evd \
 	tests \
-	doc
+	doc \
+	examples
 
 EXTRA_DIST = \
 	autogen.sh \
