Adds new class EvdDBusBridge
This class will handle D-Bus traffic for the Web transport using a custom JSON
protocol.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -67,7 +67,8 @@ source_c = \
 	evd-http-message.c \
 	evd-http-request.c \
 	evd-web-dir.c \
-	evd-dbus-agent.c
+	evd-dbus-agent.c \
+	evd-dbus-bridge.c
 
 source_h = \
 	evd.h \
@@ -104,7 +105,8 @@ source_h = \
 	evd-http-message.h \
 	evd-http-request.h \
 	evd-web-dir.h \
-	evd-dbus-agent.h
+	evd-dbus-agent.h \
+	evd-dbus-bridge.h
 
 source_h_priv = \
 	evd-marshal.h \
