Adds a new macro 'EXAMPLES_COMMON_DIR' to C examples
pointing to the directory containing the common files.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,12 +1,15 @@
 MAINTAINERCLEANFILES = \
 	Makefile.in
 
+examples_common_dir = `pwd`/common
+
 AM_CFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(TLS_CFLAGS) \
 	$(UUID_CFLAGS) \
 	$(JSON_CFLAGS) \
 	$(SOUP_CFLAGS) \
+	-DEXAMPLES_COMMON_DIR="\"$(examples_common_dir)\"" \
 	-Wall -g3 -O0 -ggdb \
 	-I$(top_srcdir)/evd
 
