--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -72,7 +72,8 @@ source_c = \
 	evd-dbus-bridge.c \
 	evd-dbus-daemon.c \
 	evd-jsonrpc.c \
-	evd-tls-cipher.c
+	evd-tls-cipher.c \
+	evd-daemon.c
 
 source_h = \
 	evd.h \
@@ -114,7 +115,8 @@ source_h = \
 	evd-dbus-bridge.h \
 	evd-dbus-daemon.h \
 	evd-jsonrpc.h \
-	evd-tls-cipher.h
+	evd-tls-cipher.h \
+	evd-daemon.h
 
 source_h_priv = \
 	evd-marshal.h \
