--- a/evd/evd-0.1.pc.in
+++ b/evd/evd-0.1.pc.in
@@ -9,6 +9,6 @@ localedir=@localedir@
 Name: EventDance
 Description: An event distribution framework.
 Requires: glib-2.0 gio-2.0 gobject-2.0 libsoup-2.4 uuid
-Version: @EVD_API_VERSION@
+Version: @EVD_VERSION@
 Libs: -L${libdir} -levd-@EVD_API_VERSION@
 Cflags: -I${includedir}/evd-@EVD_API_VERSION@
