Adds new class EvdPkiPrivkey
representing the private key of a PKI key pair.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -75,6 +75,7 @@ source_c = \
 	evd-dbus-daemon.c \
 	evd-jsonrpc.c \
 	evd-tls-cipher.c \
+	evd-pki-privkey.c \
 	evd-daemon.c
 
 source_h = \
@@ -119,6 +120,8 @@ source_h = \
 	evd-dbus-daemon.h \
 	evd-jsonrpc.h \
 	evd-tls-cipher.h \
+	evd-pki-common.h \
+	evd-pki-privkey.h \
 	evd-daemon.h
 
 source_h_priv = \
