--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -141,7 +141,8 @@ lib@EVD_API_NAME@_la_LIBADD = \
 	$(UUID_LIBS) \
 	$(SOUP_LIBS) \
 	$(TLS_LIBS) \
-	$(JSON_LIBS)
+	$(JSON_LIBS) \
+	-lgcrypt
 
 lib@EVD_API_NAME@_la_CFLAGS  = \
 	$(AM_CFLAGS) \
@@ -192,7 +193,7 @@ introspection_sources = $(evd_HEADERS) $(source_c)
 @EVD_GIR_API_NAME@.gir: lib@EVD_API_NAME@.la Makefile
 @EVD_GIR_TARGET_NAME@_INCLUDES = GObject-2.0 Gio-2.0 Soup-2.4
 @EVD_GIR_TARGET_NAME@_CFLAGS = $(INCLUDES) $(JSON_CFLAGS)
-@EVD_GIR_TARGET_NAME@_LIBS = lib@EVD_API_NAME@.la uuid
+@EVD_GIR_TARGET_NAME@_LIBS = @EVD_API_NAME@ uuid gcrypt
 @EVD_GIR_TARGET_NAME@_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
 
 INTROSPECTION_GIRS += @EVD_GIR_API_NAME@.gir
