--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -19,6 +19,7 @@ AM_LIBS = \
 	$(UUID_LIBS) \
 	$(JSON_LIBS) \
 	$(SOUP_LIBS) \
+	-lgcrypt \
 	$(top_srcdir)/evd/libevd-@EVD_API_VERSION@.la
 
 if HAVE_GIO_UNIX
