--- a/configure.ac
+++ b/configure.ac
@@ -69,20 +69,20 @@ AM_PROG_CC_C_O
 PKG_PROG_PKG_CONFIG
 
 # Required libraries
-GIO_REQUIRED=2.23.1
+GLIB_REQUIRED=2.28.0
 
-PKG_CHECK_MODULES(GLIB, gio-2.0 >= $GIO_REQUIRED
-		        glib-2.0 >= 2.23.0
-		        gthread-2.0 >= 2.23.0
-		        gobject-2.0 >= 2.23.0)
+PKG_CHECK_MODULES(GLIB, gio-2.0 >= $GLIB_REQUIRED
+		        glib-2.0 >= $GLIB_REQUIRED
+		        gthread-2.0 >= $GLIB_REQUIRED
+		        gobject-2.0 >= $GLIB_REQUIRED)
 
-PKG_CHECK_MODULES([GIO_UNIX], [gio-unix-2.0 >= $GIO_REQUIRED],
+PKG_CHECK_MODULES([GIO_UNIX], [gio-unix-2.0 >= $GLIB_REQUIRED],
         [HAVE_GIO_UNIX=yes],
         [HAVE_GIO_UNIX=no])
 AM_CONDITIONAL(HAVE_GIO_UNIX, test x"$HAVE_GIO_UNIX" = x"yes")
 
-PKG_CHECK_MODULES(TLS, gnutls >= 2.6.5)
-PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.22.0)
+PKG_CHECK_MODULES(TLS, gnutls >= 3.0.0)
+PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.28.0)
 PKG_CHECK_MODULES(UUID, uuid >= 2.16.0)
 PKG_CHECK_MODULES(JSON, json-glib-1.0 >= 0.10.0)
 
