--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -204,7 +204,7 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
 introspection_sources = $(evd_HEADERS) $(source_c)
 
 @EVD_GIR_API_NAME@.gir: lib@EVD_API_NAME@.la Makefile
-@EVD_GIR_TARGET_NAME@_INCLUDES = GObject-2.0 Gio-2.0 Soup-2.4
+@EVD_GIR_TARGET_NAME@_INCLUDES = GObject-2.0 Gio-2.0 Soup-2.4 Json-1.0
 @EVD_GIR_TARGET_NAME@_CFLAGS = $(INCLUDES) $(JSON_CFLAGS)
 @EVD_GIR_TARGET_NAME@_LIBS = @EVD_API_NAME@ uuid gcrypt
 @EVD_GIR_TARGET_NAME@_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
