Factorizes websocket code version 00 into a separate file
Almost all server implementation in EvdWebsocketServer was rewritten
to allow other websocket versions to be added in an organized way.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -72,6 +72,7 @@ source_c = \
 	evd-peer-manager.c \
 	evd-longpolling-server.c \
 	evd-websocket-common.c \
+	evd-websocket00.c \
 	evd-websocket-server.c \
 	evd-connection-pool.c \
 	evd-reproxy.c \
@@ -145,7 +146,8 @@ source_h_priv = \
 	evd-poll.h \
 	evd-tls-common.h \
 	evd-tls-dh-generator.h \
-	evd-websocket-common.h
+	evd-websocket-common.h \
+	evd-websocket00.h
 
 lib@EVD_API_NAME@_la_LIBADD = \
 	$(GLIB_LIBS) \
