build: Includes dbus-daemon.conf to EXTRA_DIST rule of tests' Makefile
This file is required by test-dbus-bridge test which now spawns its own DBus
daemon.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -108,4 +108,5 @@ EXTRA_DIST = \
 	js/common/assert.js \
 	js/common/test.js \
 	js/testResolver.js \
-	js/testTlsCertificate.js
+	js/testTlsCertificate.js \
+	dbus-daemon.conf
