Adds WebSocket protocol implementation following RFC-6455
This new set of functions will deprecate evd-websocket-common.* and remove
the per-version implementations (00 and 08).

The implementation still lacks some details and checks, but is a fully working
start point.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -71,6 +71,7 @@ source_c = \
 	evd-peer.c \
 	evd-peer-manager.c \
 	evd-longpolling-server.c \
+	evd-websocket-protocol.c \
 	evd-websocket-common.c \
 	evd-websocket00.c \
 	evd-websocket08.c \
