Removes WebSocket implementations for versions 00 and 08, and common code
The new WebSocket implementation is in evd-websocket-protocol.*

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -72,9 +72,6 @@ source_c = \
 	evd-peer-manager.c \
 	evd-longpolling-server.c \
 	evd-websocket-protocol.c \
-	evd-websocket-common.c \
-	evd-websocket00.c \
-	evd-websocket08.c \
 	evd-websocket-server.c \
 	evd-connection-pool.c \
 	evd-reproxy.c \
@@ -152,9 +149,7 @@ source_h_priv = \
 	evd-poll.h \
 	evd-tls-common.h \
 	evd-tls-dh-generator.h \
-	evd-websocket-common.h \
-	evd-websocket00.h \
-	evd-websocket08.h
+	evd-websocket-protocol.h
 
 lib@EVD_API_NAME@_la_LIBADD = \
 	$(GLIB_LIBS) \
