--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -43,7 +43,8 @@ noinst_PROGRAMS = \
 	test-dbus-bridge \
 	test-tls-cipher \
 	test-pki \
-	test-io-stream-group
+	test-io-stream-group \
+	test-websocket-transport
 
 TESTS = \
 	test-json-filter \
@@ -51,7 +52,9 @@ TESTS = \
 	test-dbus-bridge \
 	test-tls-cipher \
 	test-pki \
-	test-io-stream-group
+	test-io-stream-group \
+	test-websocket-transport
+
 
 # test-all
 test_all_CFLAGS = $(AM_CFLAGS) -DHAVE_JS
@@ -87,6 +90,11 @@ test_pki_SOURCES = test-pki.c
 test_io_stream_group_CFLAGS = $(AM_CFLAGS)
 test_io_stream_group_LDADD = $(AM_LIBS)
 test_io_stream_group_SOURCES = test-io-stream-group.c
+
+# test-websocket-transport
+test_websocket_transport_CFLAGS = $(AM_CFLAGS)
+test_websocket_transport_LDADD = $(AM_LIBS)
+test_websocket_transport_SOURCES = test-websocket-transport.c
 
 if HAVE_JS
 noinst_PROGRAMS += test-all-js
