--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,14 +42,16 @@ noinst_PROGRAMS = \
 	test-resolver \
 	test-dbus-bridge \
 	test-tls-cipher \
-	test-pki
+	test-pki \
+	test-io-stream-group
 
 TESTS = \
 	test-json-filter \
 	test-resolver \
 	test-dbus-bridge \
 	test-tls-cipher \
-	test-pki
+	test-pki \
+	test-io-stream-group
 
 # test-all
 test_all_CFLAGS = $(AM_CFLAGS) -DHAVE_JS
@@ -80,6 +82,11 @@ test_tls_cipher_SOURCES = test-tls-cipher.c
 test_pki_CFLAGS = $(AM_CFLAGS)
 test_pki_LDADD = $(AM_LIBS)
 test_pki_SOURCES = test-pki.c
+
+# test-io-stream-group
+test_io_stream_group_CFLAGS = $(AM_CFLAGS)
+test_io_stream_group_LDADD = $(AM_LIBS)
+test_io_stream_group_SOURCES = test-io-stream-group.c
 
 if HAVE_JS
 noinst_PROGRAMS += test-all-js
