build: Removes C89 compliance flag from CFLAGS
Unfortunately, GnuTLS 3.0 headers are not C89 compliant and compilation
is failing. Upgrading to GnuTLS 3.0 is unavoidable at this point.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -21,7 +21,7 @@ AM_CFLAGS += -DENABLE_TESTS
 endif
 
 if ENABLE_DEBUG
-AM_CFLAGS += -Werror -g3 -O0 -ggdb -std=c89 -D_GNU_SOURCE
+AM_CFLAGS += -Werror -g3 -O0 -ggdb -D_GNU_SOURCE
 else
 AM_CFLAGS += -DG_DISABLE_ASSERT -DG_DISABLE_CHECKS
 endif
