build: Updates git ignore files to include more targets

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,8 +1,33 @@
 test-all
+
 test-json-filter
+test-json-filter.log
+test-json-filter.trs
+
 test-resolver
+test-resolver.log
+test-resolver.trs
+
 test-dbus-bridge
+test-dbus-bridge.log
+test-dbus-bridge.trs
+
 test-tls-cipher
+test-tls-cipher.log
+test-tls-cipher.trs
+
 test-pki
+test-pki.log
+test-pki.trs
+
 test-io-stream-group
+test-io-stream-group.log
+test-io-stream-group.trs
+
 test-websocket-transport
+test-websocket-transport.log
+test-websocket-transport.trs
+
+test-suite
+test-suite.log
+test-suite.trs
